Temporarily downgraded language level to Java 9 to support deployment on Solaris 10